# statesync

./: AGENT.md  Cargo.toml  Dockerfile  README.md  ai-rules.md  code_standards.md  statesync.xml  unraid-template.xml
.github/workflows/: cd.yml  ci.yml  release.yml
container/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: ARCHITECTURE.md
graphics/: BRAND.md
src/: backfill.rs  client.rs  config.rs  dashboard.rs  index.css  index.html  index.js  lib.rs  main.rs  state.rs  sync.rs  sync_force.rs  web.rs  web_api.rs  websocket.rs
src/cli/: dry_run.rs  force_sync.rs  helpers.rs  mod.rs  tests.rs  tui.rs
src/client/: api.rs  api_items.rs  mod.rs  played.rs  played_lists.rs  provider_ids.rs  request.rs  types.rs
src/config/: helpers.rs  loader.rs  mod.rs  tests.rs  url_safety.rs  validation.rs
src/dashboard/: dashboard_how.rs  dashboard_modals.rs  dashboard_page.rs  mod.rs  scripts.rs  scripts_actions.rs  scripts_config_save.rs  scripts_force_ui.rs  scripts_map_settings.rs  scripts_modals.rs  scripts_server_form.rs  scripts_sessions_users.rs  scripts_user_actions.rs  styles.rs  styles_base.rs  styles_panels.rs
src/state/: cache.rs  mod.rs  tests.rs  tests_more.rs  user_mapping.rs
src/sync/: favorite_sync.rs  live_item_title.rs  mod.rs  progress.rs  (+2 more)
tests/: common.rs  config_safety_tests.rs  extra_unit_tests.rs  force_sync_types_tests.rs  integration_tests.rs  repo_structure_tests.rs  usability_tests.rs  user_mapping_tests.rs  web_api_validation_tests.rs  web_ui_e2e_tests.rs
unraid/: unraid-template.xml
watchparty/: Join - Justice League Dark.strm
(+51 files in other folders)
