[package]
name = "statesync"
version = "0.16.1"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
percent-encoding = "2.3"
chrono = "0.4"
maud = "0.26"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
