[package]
name = "statesync"
version = "0.28.40"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
percent-encoding = "2.3"
chrono = "0.4"
maud = "0.26"
shared-core = { git = "https://github.com/studio2201/shared-assets.git", tag = "v3.0.33" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
mockito = "1.5"
tempfile = "3"
